@@ -1,5 +1,10 @@
 2009-04-01  Bastien Nocera  <hadess@hadess.net>
 
+	* lib/totem_internal.h: And delete totem_internal.h too,
+	thanks Christian
+
+2009-04-01  Bastien Nocera  <hadess@hadess.net>
+
 	* lib/asprintf.c: Remove unused file (Closes: #577538)
 
 2009-03-31  Bastien Nocera  <hadess@hadess.net>
